Updated intro paragraph with improvements.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -37,7 +37,7 @@
     <div class="section">
       <h3>🎓 Background & Experience</h3>
       <p>
-      I’m an AWS Certified Solutions Architect – Associate with a BE and MS in Computer Engineering. My master’s included an advanced certification in Networking & Wireless Communication, fueling my interest in cloud infrastructure. After several years developing and supporting mission-critical hardware, I transitioned into agile product leadership roles. I’ve led scrum teams, owned roadmaps, and driven growth in cybersecurity and aerospace — and now, I’m bringing that experience into the cloud.
+      I’m an AWS Certified Solutions Architect – Associate with a BE and MS in Computer Engineering. My master’s included an advanced certification in Networking & Wireless Communication, fueling my interest in cloud infrastructure. After several years developing and supporting mission-critical hardware, I transitioned into agile product leadership roles. I’ve led scrum teams, owned roadmaps, and driven growth in cybersecurity and aerospace, and now, I’m focused on building in the cloud where my background and interests align.
       </p>
     </div>
 
