Added unit & integration tests, trigging initial CI pipeline.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -15,7 +15,7 @@
     <div class="intro-flex">
       <img src="profile.jpg" alt="Reuben Mulholland" class="intro-image" />
       <div class="intro-text">
-        <h2>💼 Reuben Mulholland</h2>
+        <h2>Reuben Mulholland</h2>
         <h2>Product Leader & Cloud Technologist</h2>
         <p>
           Visitors: <span id="replaceme"></span>
