Mod frontend for visitor count loading spinner.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -18,7 +18,7 @@
         <h2>Reuben Mulholland</h2>
         <h2>Product Leader & Cloud Technologist</h2>
         <p>
-          Visitors: <span id="replaceme"></span>
+          Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display: none;"></span>
         </p>
       </div>
     </div>
