PR test: tiny tweak to .html

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -62,18 +62,14 @@
       </ol>
     </div>
 
+
     <div class="section">
       <h3>📈 What’s Next</h3>
       <ol>
-        <li>Implement a visitor counter using <strong>JavaScript</strong> on the frontend, backed by a <strong>Lambda function</strong>, <strong>DynamoDB</strong>, and <strong>API Gateway</strong></li>
-        <li>Write backend logic in <strong>Python</strong> using the <strong>boto3</strong> SDK and add unit tests to ensure reliability</li>
-        <li>Set up <strong>CI/CD pipelines</strong> using <strong>GitHub Actions</strong> to automate deployment of both frontend and backend code</li>
-        <li>Enhance <strong>monitoring and logging</strong> with <strong>CloudWatch</strong> to track API usage and detect issues</li>
-        <li>Refine <strong>IAM policies</strong> for the Lambda role to ensure least-privilege execution</li>
-        <li>Simulate a basic <strong>AWS Organizations</strong> setup to explore multi-account structure, billing separation, and cost control best practices</li>
+        <li>Finish **Budgets + SNS + Kill Switch Lambda** in eng → test → prod.</li>
+        <li>Add basic **CloudWatch dashboards/alarms** for API latency, 4xx/5xx, and DynamoDB throttles.</li>
       </ol>
     </div>
-
 
     <div class="section">
       <h3>🎯 Career Focus</h3>
