--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -11,11 +11,13 @@
 </head>
 <body>
   <div class="container">
-    <nav>
+    <nav aria-label="Primary">
       <a href="index.html">👤 About</a>
-      <a href="resume.html">📄 My Resume</a>
+      <a href="resume.html">📄 Resume</a>
+      <a href="https://github.com/zReuben" target="_blank" rel="noopener noreferrer">💻 GitHub</a>
+      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a>
     </nav>
-
+    
     <div class="embed-wrapper">
       <iframe src="Reuben Mulholland Resume 2025.pdf"></iframe>
       <a class="button" href="Reuben Mulholland Resume 2025.pdf" download="Reuben Mulholland Resume 2025.pdf" type="application/pdf">Download PDF</a>
